# gonzo

./: CMakeLists.txt  README.md  vcpkg.json
include/libgonzo/: error.hpp  libgonzo.hpp  pipe.hpp  process.hpp
src/: CMakeLists.txt  libgonzo.cpp  pipe.cpp  process.cpp
test/: CMakeLists.txt  tests.cpp
test/targets/: run_endlessly.cpp
tools/: CMakeLists.txt  gonzo.cpp
